<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/title_text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/top_table_2"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <TextView
        android:id="@+id/tvB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:text="@string/top_table_1"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tvA"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:text="@string/top_table_3"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.553"
        app:layout_constraintStart_toEndOf="@+id/tvA"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTrueTrue2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/True"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvA" />

    <TextView
        android:id="@+id/tvTrueTrue1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/True"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/tvTrueTrue2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvB" />

    <EditText
        android:id="@+id/ptInput1"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:digits="TF"
        android:singleLine="true"
        android:imeOptions="actionNext"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toEndOf="@+id/tvTrueTrue2"
        app:layout_constraintTop_toBottomOf="@+id/tvAB" />

    <TextView
        android:id="@+id/tvTrueFalse2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/False"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTrueTrue2" />

    <TextView
        android:id="@+id/tvTrueFalse1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/True"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/tvTrueFalse2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTrueTrue1" />

    <EditText
        android:id="@+id/ptInput2"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:digits="TF"
        android:singleLine="true"
        android:imeOptions="actionNext"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toEndOf="@+id/tvTrueFalse2"
        app:layout_constraintTop_toBottomOf="@+id/ptInput1" />

    <TextView
        android:id="@+id/tvFalseTrue2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/True"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTrueFalse2" />

    <TextView
        android:id="@+id/tvFalseTrue1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/False"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/tvFalseTrue2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTrueFalse1" />

    <EditText
        android:id="@+id/ptInput3"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:digits="TF"
        android:singleLine="true"
        android:imeOptions="actionNext"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toEndOf="@+id/tvFalseTrue2"
        app:layout_constraintTop_toBottomOf="@+id/ptInput2" />

    <TextView
        android:id="@+id/tvFalseFalse2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/False"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFalseTrue2" />

    <TextView
        android:id="@+id/tvFalseFalse1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/False"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/tvFalseFalse2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFalseTrue1" />

    <EditText
        android:id="@+id/ptInput4"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:digits="TF"
        android:singleLine="true"
        android:imeOptions="actionNext"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toEndOf="@+id/tvFalseFalse2"
        app:layout_constraintTop_toBottomOf="@+id/ptInput3" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFalseFalse2" />

</androidx.constraintlayout.widget.ConstraintLayout>